--- a/src/app/shared/components/navbar/navbar.css
+++ b/src/app/shared/components/navbar/navbar.css
@@ -131,6 +131,10 @@
     color: var(--navbar-text);
 }
 
+.user-role {
+    color: var(--navbar-text);
+}
+
 .dropdown-menu {
     display: none;
     position: absolute;
